--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -37,5 +37,8 @@
                 </div>
             </div>
         </form>
+        <div *ngIf="ShowLoader" class="form-group">
+            <p>Cargando...</p>
+        </div>
     </div>
 </div>
