--- a/src/app/Shared/side-bar/side-bar.component.html
+++ b/src/app/Shared/side-bar/side-bar.component.html
@@ -31,7 +31,7 @@
                     Lista de Usuarios</a>
             </li>
             <li>
-                <a [routerLink]="[ '/Login' ]">
+                <a style="cursor: pointer;" (click)="Salir()">
                     <i class="ti-power-off fa-fw"></i>
                     Salir</a>
             </li>
