--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -7,13 +7,13 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="col-in text-center">
                             <h5 class="text-danger">Usuarios Registrados</h5>
-                            <h3 class="counter">5645</h3>
+                            <h3 class="counter">{{ AllUsers }}</h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="col-in text-center">
                             <h5 class="text-danger">Usuarios Activos</h5>
-                            <h3 class="counter">5645</h3>
+                            <h3 class="counter">{{ ActiveUser }}</h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
