--- a/src/app/Pages/porfile/porfile.component.html
+++ b/src/app/Pages/porfile/porfile.component.html
@@ -8,8 +8,8 @@
                         <div class="user-content">
                             <a href="javascript:void(0)"><img src="../../../assets/images/users/genu.jpg"
                                     class="thumb-lg img-circle" alt="img"></a>
-                            <h4 class="text-white">{{ User.Nombre }}</h4>
-                            <h5 class="text-white">{{ User.Correo }}</h5>
+                            <h4 class="text-white">{{ CurrentUser }}</h4>
+                            <h5 class="text-white">{{ CurrentEmail }}</h5>
                         </div>
                     </div>
                 </div>
@@ -31,36 +31,41 @@
         </div>
         <div class="col-md-8 col-xs-12">
             <div class="white-box">
-                <form class="form-horizontal form-material">
-                    <div class="form-group">
-                        <label class="col-md-12">Full Name</label>
+                <form [formGroup]="form" (ngSubmit)="ActualizarUsuario()" class="form-horizontal form-material">
+                   <div class="form-row">
+                    <div class="form-group col-6">
+                        <label class="col-md-12">Nombre</label>
                         <div class="col-md-12">
-                            <input type="text" placeholder="Johnathan Doe"
-                                class="form-control form-control-line"> </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="example-email" class="col-md-12">Email</label>
-                        <div class="col-md-12">
-                            <input type="email" placeholder="johnathan@admin.com"
-                                class="form-control form-control-line" name="example-email" id="example-email">
+                            <input 
+                                type="text" 
+                                placeholder="Johnathan Doe"
+                                name="nombre"
+                                formControlName="nombre"
+                                class="form-control form-control-line"
+                            > 
                         </div>
                     </div>
+                    <div class="form-group col-6">
+                        <label class="col-md-12">Apellidos</label>
+                        <div class="col-md-12">
+                            <input 
+                                type="text" 
+                                placeholder="Johnathan Doe"
+                                class="form-control form-control-line"
+                                formControlName="apellidos"
+                            > 
+                        </div>
+                    </div>
+                   </div>
                     <div class="form-group">
                         <label class="col-md-12">Password</label>
                         <div class="col-md-12">
-                            <input type="password" value="password" class="form-control form-control-line">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-12">Phone No</label>
-                        <div class="col-md-12">
-                            <input type="text" placeholder="123 456 7890"
-                                class="form-control form-control-line"> </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-12">Message</label>
-                        <div class="col-md-12">
-                            <textarea rows="5" class="form-control form-control-line"></textarea>
+                            <input 
+                                type="password" 
+                                value="password"
+                                class="form-control form-control-line"
+                                formControlName="contrasenia"
+                            >
                         </div>
                     </div>
                     <div class="form-group">
