--- a/src/app/Pages/usuarios/usuarios.component.html
+++ b/src/app/Pages/usuarios/usuarios.component.html
@@ -67,8 +67,9 @@
                         <label class="col-md-12">Role</label>
                         <div class="col-md-12">
                          <select  class="form-control" formControlName="idRol">
-                            <option value="1">Select an option</option>
-                            <option value="2">Admin</option>
+                            <option value="0">Select an option</option>
+                            <option value="1">Admin</option>
+                            <option value="2">User</option>
                          </select>
                         </div>
                     </div>
