--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -38,7 +38,7 @@
             </div>
         </form>
         <div *ngIf="ShowLoader" class="form-group">
-            <p>Cargando...</p>
+           <p>Ingresando...</p>
         </div>
     </div>
 </div>
